<resources>
    <string name="app_name">Doctor\'s Point</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    
    <string name="SHA1" translatable="false">05:99:B3:C6:4B:26:D0:A9:96:3C:03:FA:A8:6A:99:D8:36:C2:74:E1</string>
    <string name="doctor_s_point">Doctor\'s Point</string>
    <string name="garland_inc">garland Inc.</string>
    <string name="add_clinic">Add Clinic or Hospital</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="add_hospital">Add Hospital</string>
    <string name="tools">Tools</string>
    <string name="get_location">GET LOCATION</string>
    <string name="disease">Disease Name</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="doctor_s_name">Doctor\'s Name</string>
    <string name="doctor_s_designation">Designation</string>
    <string name="doctor_for_disease">For Disease</string>
    <string name="medical_college" >Medical College</string>
    <string name="doctor_mail">Emaail Address</string>
    <string name="doctor_s_contact">Contact Number</string>
    <string name="doctor_s_id">Track ID</string>
    <string name="doctor">Doctor:</string>
    <string name="select_division">Select Division</string>
    <string name="select_district">Select District</string>
    <string name="save">save</string>
    <string name="remove_last_doctor">remove last doctor</string>
    <string name="add_more_doctor">Add More Doctor</string>
    <string name="setup">Setup</string>
    <string name="designation_setup">Designation Setup</string>
    <string name="disease_setup">Disease Setup</string>
    <string name="clinic_setup">Clinic Setup</string>
    <string name="hospital_setup">Hospital Setup</string>
    <string name="medical_college_setup">Medical College Setup</string>
    <string name="list">Saved List</string>
    <string name="medical_college_name">Medical College Name</string>
    <string name="select_territory">Select Territory</string>
    <string name="website_url">Website Url</string>
    <string name="search">Search</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="sub">-</string>
    <string name="doctor_setup">Doctor Setup</string>
    <string name="add_new">Add New</string>
    <string name="delete_last_entry">Delete Last Entry</string>
    <string name="delete_first_entry">Delete First Entry</string>
    <string name="diseases">Diseases</string>
    <string name="hospital">Hospital</string>
    <string name="facebook">Facebook</string>
    <string name="mail">E-Mail</string>
    <string name="_0">0</string>
    <string name="designation">Designation</string>
</resources>
