<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:id="@+id/doc_heading"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/doctor"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_s_name"
        android:id="@+id/doctor_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_s_designation"
        android:id="@+id/doctor_designation"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_for_disease"
        android:id="@+id/doctor_disease"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medical_college"
        android:id="@+id/medical_college"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_mail"
        android:inputType="textEmailAddress"
        android:id="@+id/doctor_mail"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_s_contact"
        android:id="@+id/doctor_contact"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/doctor_s_id"
        android:id="@+id/doctor_trid"
        />

</LinearLayout>