<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="60sp"
        android:id="@+id/contact_count"
        android:text="0"
        android:gravity="center"
        style="@style/text_field"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_width="0sp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <EditText
            style="@style/text_field"
            android:id="@+id/contact"
            android:inputType="numberDecimal"
            android:hint="@string/doctor_s_contact"
            />
        <EditText
            style="@style/text_field"
            android:id="@+id/mail"
            android:hint="@string/mail"
            />
        <EditText
            style="@style/text_field"
            android:id="@+id/facebook"
            android:hint="@string/facebook"
            />
    </LinearLayout>
</LinearLayout>